unity-api (7.110) UNRELEASED; urgency=medium

  * MirSurfaceInterface: replace keymapLayout and keymapVariant with keymap

 -- Daniel d'Andrada <daniel.dandrada@canonical.com>  Wed, 13 Apr 2016 13:39:29 -0300

unity-api (7.109+16.04.20160405-0ubuntu1) xenial; urgency=medium

  [ Marcus Tomlinson ]
  * Add set*() methods to IniParser

  [ CI Train Bot ]
  * No-change rebuild.

 -- Marcus Tomlinson <marcus.tomlinson@canonical.com>  Tue, 05 Apr 2016 06:03:34 +0000

unity-api (7.108+16.04.20160322-0ubuntu1) xenial; urgency=medium

  [ Lukáš Tinkl, Michał Sawicz ]
  * Add API for setting keyboard layout+variant on a surface (LP:
    #1524400, #1491340)

  [ Nick Dedekind ]
  * Added setStage for sidestage redesign.
  * Added support for low shell chrome (LP: #1535397)

  [ Pawel Stolowski ]
  * Base interfaces for filters.
  * Interface for RangeInputFilter.
  * ValueSliderFilter interface.

 -- Michael Zanetti <michael.zanetti@canonical.com>  Tue, 22 Mar 2016 07:48:55 +0000

unity-api (7.107+16.04.20160223-0ubuntu1) xenial; urgency=medium

  * Removed PreviewStackInterface, modified ScopeInterface to return
    PreviewModelInterface on preview().
  * Interface for activationInProgress flag. (LP: #1537132)

 -- Pawel Stolowski <ci-train-bot@canonical.com>  Tue, 23 Feb 2016 12:12:26 +0000

unity-api (7.107-0ubuntu1) UNRELEASED; urgency=medium

 -- Michal Sawicz <michal.sawicz@canonical.com>  Tue, 16 Feb 2016 10:06:55 +0100

unity-api (7.106+16.04.20160211.1-0ubuntu1) xenial; urgency=medium

  [ Daniel d'Andrada ]
  * Added ApplicationInfoInterface.initialSurfaceSize (LP: #1532974)
  * MirSurfaceInterface: added size hints

 -- Michał Sawicz <michal.sawicz@canonical.com>  Thu, 11 Feb 2016 23:53:29 +0000

unity-api (7.105+16.04.20160104-0ubuntu1) xenial; urgency=medium

  [ Michael Zanetti ]
  [Albert Astals Cid ]
  * New property to support more complex cards

  [ CI Train Bot ]
  * No-change rebuild.
