@@ -29,6 +29,8 @@ namespace shell
 namespace application
 {
 
+class MirSurfaceListInterface;
+
 /**
    @brief Holds a Mir surface. Pretty much an opaque class.
 
@@ -125,6 +127,18 @@ class MirSurfaceInterface : public QObject
      */
     Q_PROPERTY(QString keymap READ keymap WRITE setKeymap NOTIFY keymapChanged)
 
+    /**
+     * @brief Whether the surface is focused
+     *
+     * It will be true if this surface is MirFocusControllerInterface::focusedSurface
+     */
+    Q_PROPERTY(bool focused READ focused NOTIFY focusedChanged)
+
+    /**
+     * @brief The list of prompt surfaces under this one
+     */
+    Q_PROPERTY(unity::shell::application::MirSurfaceListInterface* promptSurfaceList READ promptSurfaceList CONSTANT)
+
 public:
     /// @cond
     MirSurfaceInterface(QObject *parent = nullptr) : QObject(parent) {}
@@ -159,7 +173,29 @@ public:
     virtual QString keymap() const = 0;
 
     virtual Mir::ShellChrome shellChrome() const = 0;
+
+    virtual bool focused() const = 0;
+
+    virtual MirSurfaceListInterface* promptSurfaceList() = 0;
     /// @endcond
+
+    /**
+     * @brief Requests focus for this surface
+     *
+     * Causes the emission of focusRequested()
+     */
+    Q_INVOKABLE virtual void requestFocus() = 0;
+
+    /**
+     * @brief Sends a close request
+     *
+     */
+    Q_INVOKABLE virtual void close() = 0;
+
+    /**
+     * @brief Raises this surface to be the first/top one among its siblings
+     */
+    Q_INVOKABLE virtual void raise() = 0;
 
 Q_SIGNALS:
     /// @cond
@@ -178,7 +214,13 @@ Q_SIGNALS:
     void heightIncrementChanged(int value);
     void shellChromeChanged(Mir::ShellChrome value);
     void keymapChanged(const QString &value);
+    void focusedChanged(bool value);
     /// @endcond
+
+    /**
+     * @brief Emitted in response to a requestFocus() call
+     */
+    void focusRequested();
 };
 
 } // namespace application
